--- a/styles/main.css
+++ b/styles/main.css
@@ -4,6 +4,21 @@
 }
 .main-header-outer{
     width: 100%;
-    height: 100px;
+    height: 90px;
     border: 1px solid red;
+    display: flex;
+}
+.top-bar-left{
+    width: 200px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.top-bar-left > img{
+    width: 150px;
+}
+.top-bar-right{
+    border: 1px solid red;
+    flex: 1;
 }
