--- a/styles/main.css
+++ b/styles/main.css
@@ -1,11 +1,12 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Kanit', sans-serif;
 }
 .main-header-outer{
     width: 100%;
     height: 90px;
-    border: 1px solid red;
+   /* border: 1px solid red;*/
     display: flex;
 }
 .top-bar-left{
@@ -19,6 +20,59 @@
     width: 150px;
 }
 .top-bar-right{
-    border: 1px solid red;
+  /*  border: 1px solid red;*/
     flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
+/*========nav bar styles==============*/
+.nav-bar-outer{
+    list-style: none;
+    display: flex;
+    /*border: 1px solid red;*/
+}
+.nav-bar-outer > li{
+    /*border: 1px solid red;*/
+    padding: 5px 15px;
+    border-bottom: 2px solid transparent;
+}
+.nav-bar-outer > li > span > a{
+    text-decoration: none;
+    color: black;
+}
+.nav-bar-outer > li:hover{
+    /*border-bottom: 2px solid red;*/
+    border-color: #FF500A;
+}
+.nav-bar-outer > li:last-child:hover{
+    border-color: transparent;
+}
+.contact-us-now-button{
+    background-color: #FF500A;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 20px;
+    border: 1px solid #FF500A;
+}
+.contact-us-now-button:hover{
+    cursor: pointer;
+    background-color: white;
+    color: #FF500A;
+}
+/*========nav bar styles==============*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
