--- a/styles/main.css
+++ b/styles/main.css
@@ -205,6 +205,53 @@ body::-webkit-scrollbar-thumb{
 /*========landing slider styles==============*/
 
 
+/*========Sevice styles==============*/
+
+.service-outer{
+    width: 100%;
+    height: auto;
+    /*border: 1px solid red;*/
+}
+.service-header-text{
+    text-align: center;
+}
+.service-inner-wrapper{
+    height: 700px;
+    width: 100%;
+    /*border: 1px solid red;*/
+    display: flex;
+    margin-top: 50px;
+}
+.service-inner{
+    height: 400px;
+    /*border: 1px solid red;*/
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+}
+.service-inner-context{
+   /* border: 1px solid red;*/
+    flex: 1;
+}
+.service-title{
+    text-align: center;
+}
+.service-img{
+    text-align: center;
+}
+.service-img > svg{
+    width: 150px;
+    height: 150px;
+}
+.service-desc{
+    color: darkslategray;
+    font-weight: lighter;
+    text-align: justify;
+}
+/*========Sevice styles==============*/
+
+
 
 
 
