--- a/styles/main.css
+++ b/styles/main.css
@@ -268,12 +268,12 @@ body::-webkit-scrollbar-thumb {
 .about-outer {
     width: 100%;
     height: 600px;
-    border: 1px solid red;
+   /* border: 1px solid red;*/
     display: flex;
 }
 
 .about-inner {
-    border: 1px solid red;
+   /* border: 1px solid red;*/
     flex: 1;
 }
 
@@ -290,13 +290,34 @@ body::-webkit-scrollbar-thumb {
     text-align: justify;
     margin-top: 15px;
 }
-#about-left{
+
+#about-left {
     padding: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
+.about-desc-wrapper {
+    width: 100%;
+    height: 300px;
+   /* border: 1px solid red;*/
+    margin-top: 20px;
+    display: flex;
+}
+
+.about-desc-item {
+    flex: 1;
+   /* border: 1px solid red;*/
+    padding: 20px;
+}
+.about-desc-item > svg{
+    width: 100px;
+    height: 100px;
+}
+.about-titles{
+    text-align: justify;
+}
 /*========About styles==============*/
 
 
